Revise README for JavaFX MVC CRUD application
Updated README to reflect project details and structure.